# Multi-Agent-Interview-Coach_MegaSchool_ITMO

./: LICENSE  README.md  app.py  debug_runner.py  interview_log.json  main.ipynb  main.py  pyproject.toml  system_output.txt  user.yaml
agent/: README.md  graph.py  models.py  nodes.py  prompts.py  state.py
docs/: README.md  project_tech_requirements.md
logs/: README.md  interview_log_1.json  interview_log_2.json  interview_log_3.json  interview_log_4.json  interview_log_5.json
notebooks/: test_api.ipynb
workshop_guides/: README.md  multiagent.ipynb  workshop_agents_intro.ipynb
